Correct the title name

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<section class="section">
 
 		<article class="article">
-			<h3 class="section-title">Abscences</h3>
+			<h3 class="section-title">Absences</h3>
 		</article>
 
 		<article class="article">
