--- a/index.html
+++ b/index.html
@@ -92,35 +92,35 @@
 				<li class="search">
 					<label for="search">Rechercher un élève</label><input type="text" id="search">
 				</li>
-				<li class="person" onClick="MarkAway(0)">
+				<li class="person">
 					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
 				</li>
-				<li class="person" onClick="MarkAway(1)">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Adrien Bocquet</span>
 				</li>
-				<li class="person" onClick="MarkAway(2)">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Marie Charbonnier</span>
 				</li>
-				<li class="person" onClick="MarkAway(3)">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Baptiste Pichancourt</span>
 				</li>
-				<li class="person" onClick="MarkAway(4)">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Simon Olivier</span>
 				</li>
-				<li class="person" onClick="MarkAway(5)">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Elsa Simon</span>
 				</li>
-				<li class="person" onClick="MarkAway(6)">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Robin Heusch</span>
 				</li>
-				<li class="person" onClick="MarkAway(7)">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Eloise Simon</span>
 				</li>
-				<li class="person" onClick="MarkAway(8)">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Sébastien Maginot</span>
 				</li>
-				<li class="person" onClick="MarkAway(9)">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Salomé Vedel</span>
 				</li>
 			</ul>
 		</article>
@@ -154,6 +154,7 @@
 
 	<script src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/nav.min.js"></script>
+	<script src="js/appel.min.js"></script>
 
 	
 </body>
