Change li to div for form

--- a/index.html
+++ b/index.html
@@ -75,52 +75,53 @@
 		</article>
 
 		<article class="article">
+			<div class="hour">
+				<label for="hour">Selectionner une heure</label>
+				<select id="hour">
+					<option value="1">8h-9h</option>
+					<option value="2">9h-10h</option>
+					<option value="3">10h-11h</option>
+					<option value="4">11h-12h</option>
+					<option value="5">13h30-14h30</option>
+					<option value="6">14h30-15h30</option>
+					<option value="7">15h30-16h30</option>
+					<option value="8">16h30-17h30</option>
+				</select>
+			</div>
+			<div class="search">
+				<label for="search">Rechercher un élève</label><input type="text" id="search">
+			</div>
+			
 			<ul class="liste-eleves">
-				<li class="hour">
-					<label for="hour">Selectionner une heure</label>
-					<select id="hour">
-						<option value="1">8h-9h</option>
-						<option value="2">9h-10h</option>
-						<option value="3">10h-11h</option>
-						<option value="4">11h-12h</option>
-						<option value="5">13h30-14h30</option>
-						<option value="6">14h30-15h30</option>
-						<option value="7">15h30-16h30</option>
-						<option value="8">16h30-17h30</option>
-					</select>
-				</li>
-				<li class="search">
-					<label for="search">Rechercher un élève</label><input type="text" id="search">
+				<li class="person">
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan<br/>Rajohnson</span>
 				</li>
 				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Nathan Rajohnson</span>
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Adrien<br/>Bocquet</span>
 				</li>
 				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Adrien Bocquet</span>
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Marie<br/>Charbonnier</span>
 				</li>
 				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Marie Charbonnier</span>
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Baptiste<br/>Pichancourt</span>
 				</li>
 				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Baptiste Pichancourt</span>
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Simon<br/>Olivier</span>
 				</li>
 				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Simon Olivier</span>
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Elsa<br/>Simon</span>
 				</li>
 				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Elsa Simon</span>
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Robin<br/>Heusch</span>
 				</li>
 				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Robin Heusch</span>
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Eloise<br/>Simon</span>
 				</li>
 				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Eloise Simon</span>
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Sébastien<br/>Maginot</span>
 				</li>
 				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Sébastien Maginot</span>
-				</li>
-				<li class="person">
-					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Salomé Vedel</span>
+					<img class="eleve-img" src="images/Rajohnson.Nathan.png" alt=""><span class="name">Salomé<br/>Vedel</span>
 				</li>
 			</ul>
 		</article>
